# simple_data_catalog_model

./: antora-playbook.yml  antora.yml  datamodel.puml  datamodel.py  diagram.puml  pyproject.toml
.github/workflows/: deoploy-antora.yml
artifacts/documentation/modules/ROOT/pages/class/: ACLineSegment.adoc  ActivePower.adoc  BaseVoltage.adoc  Bay.adoc  Breaker.adoc  BusSegment.adoc  BusbarSection.adoc  Capacitance.adoc  ConductingEquipment.adoc  Conductor.adoc  ConnectivityNode.adoc  ConnectivityNodeContainer.adoc  Connector.adoc  Curve.adoc  CurveData.adoc  Disconnector.adoc  EarthFaultCompensator.adoc  EnergyConnection.adoc  EnergyConsumer.adoc  EnergySource.adoc  Equipment.adoc  EquipmentContainer.adoc  EquivalentEquipment.adoc  EquivalentInjection.adoc  Feeder.adoc  Fuse.adoc  GroundingImpedance.adoc  Junction.adoc  Line.adoc  LoadBreakSwitch.adoc  LoadResponseCharacteristic.adoc  NonConformLoad.adoc  NonConformLoadGroup.adoc  NonConformLoadSchedule.adoc  PowerSystemResource.adoc  PowerTransformer.adoc  PowerTransformerEnd.adoc  ProtectedSwitch.adoc  RatioTapChanger.adoc  RegularIntervalSchedule.adoc  (+14 more)
artifacts/documentation/modules/schema/: nav.adoc
artifacts/documentation/modules/schema/pages/: index.adoc
artifacts/documentation/modules/schema/pages/class/: ACDCTerminal.adoc  ACLineSegment.adoc  ApparentPower.adoc  Asset.adoc  (+64 more)
artifacts/information_models/: uno_data_model.linkml.yaml
documentation/: antora.yml
src/simple_data_catalog_model/: data-catalog.yaml  dataset_model.yaml  policy.yaml-bu
tests/: testdata.json  testdata.ttl  testdata.yaml
